force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/SBQQ__AttachmentId__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__AttachmentId__c</fullName>
        <description>ID of attachment record generated for this document.</description>
        <inlineHelpText>ID of attachment record generated for this document.</inlineHelpText>
        <label>Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>