force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/SBQQ__CustomerAmount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CustomerAmount__c</fullName>
        <description>Customer amount on the quote at the time this document was generated.</description>
        <inlineHelpText>Customer amount on the quote at the time this document was generated.</inlineHelpText>
        <label>Customer Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>