force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/SBQQ__DocumentId__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DocumentId__c</fullName>
        <description>ID of the Document record which contains its generated PDF.</description>
        <inlineHelpText>ID of the Document record which contains its generated PDF.</inlineHelpText>
        <label>Document Id</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>