force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/SBQQ__ElectronicSignature__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ElectronicSignature__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this document was generated for electronic signature.</description>
        <inlineHelpText>Field for the document to be signed electronically.</inlineHelpText>
        <label>Electronic Signature</label>
        <type>Checkbox</type>
    </CustomField>