force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/SBQQ__Key__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Key__c</fullName>
        <description>Key used to ensure unique combination of quote ID and version number.</description>
        <inlineHelpText>Key used to ensure unique combination of quote ID and version number.</inlineHelpText>
        <label>Key</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>