force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/SBQQ__ListAmount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ListAmount__c</fullName>
        <description>List amount of the quote at the time this document was generated.</description>
        <inlineHelpText>List amount of the quote at the time this document was generated.</inlineHelpText>
        <label>List Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>