force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/SBQQ__OutputFormat__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__OutputFormat__c</fullName>
        <description>Output format of this document.</description>
        <inlineHelpText>Choose the output format for this document.</inlineHelpText>
        <label>Output Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PDF</fullName>
                    <default>true</default>
                    <label>PDF</label>
                </value>
                <value>
                    <fullName>MS Word</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>