force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/SBQQ__QuoteTemplate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__QuoteTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote Template that generated this document.</description>
        <inlineHelpText>Quote Template that generated this document.</inlineHelpText>
        <label>Quote Template</label>
        <referenceTo>SBQQ__QuoteTemplate__c</referenceTo>
        <relationshipLabel>Quote Documents</relationshipLabel>
        <relationshipName>Quote_Documents</relationshipName>
        <type>Lookup</type>
    </CustomField>