force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/SBQQ__SignatureStatus__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SignatureStatus__c</fullName>
        <description>Status of electronic signature.</description>
        <inlineHelpText>Status of electronic signature.</inlineHelpText>
        <label>Signature Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Revoked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>