force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/SBQQ__ViewRecordId__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ViewRecordId__c</fullName>
        <description>Allows user to view the Quote Document Record Id.</description>
        <formula>IF(ISBLANK(SBQQ__AttachmentId__c),SBQQ__DocumentId__c,SBQQ__AttachmentId__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Allows user to view the Quote Document Record Id.</inlineHelpText>
        <label>View Record Id</label>
        <type>Text</type>
    </CustomField>